--- a/journalApp2.0/journalApp2.0.csproj
+++ b/journalApp2.0/journalApp2.0.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\Window1ViewModel.cs" />
     <Compile Include="Views\Windows\Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
